# pypi-template

./: .gitignore  .pypirc_template  Dockerfile  Pipfile  README.md  docker-compose.yml  setup.cfg  setup.sh
examples/: example.ipynb  local_example.ipynb
pypitemplate/: __init__.py  module_name.py
test/: test_sample.py
