[metadata]
name = pypitemplate
version = attr: pypitemplate._version.__version__
license = BSD-3-Clause
author = seal-git
author_email = xxx
url = https://github.com/seal-git/pypy-template
description = 'this is template.
long_description = file: README.rst
keywords = 'a, b, c',
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Natural Language :: Japanese
[options]
python_requires=>3.0
packages = find:
#include_package_data = True
#install_requires =
#    IPython
[options.packages.find] # 除外ディレクトリを指定
#exclude =
#    test
#    examples
[options.data_files] # データディレクトリを指定(あれば)
#static = package_name/static/*